--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ so can be coupled and therefore the panels are now modelled as being connected. 
 required to connect particles but by establishing a bar-to-bar spring element the model can now obtain data about strain and energy of real
 panels during deployment. <a href="#(Chen,2015)">(Chen,2015)</a> 
 
-	            <img src="model.jpg" alt="figure.1 visualisations of two panels and how to model them" width="900" height"300">
+	            <img src="model.jpg" alt="figure.1" width="900" height"300">
 			figure.1 visualisations of two panels and how to model them 
 
 A paper to study this showed the deployment predicted from this model had small motion differences from the modelled movement as seen in
 figure 2. however, they estimated this deviation might be due to the aerodynamic drag and the non-constant spring stiffness. <a href="#(Jingyi,2022)">(Jingyi,2022)</a> 
 this shows we are getting much closer to modelling origami and the more accurate the model the more we can apply these uses in space.
-	            <img src="deploymentfigure.jpg" alt="a computer generated simulation then a real life test" width="900" height"300">
+	            <img src="deploymentfigure.jpg" alt="figure 2." width="900" height"300">
 			figure 2. row 1 shows the predicted movement of the panels and row two shows the actual deployment 
 
 
@@ -107,7 +107,7 @@ insert figure here <a href="#(Bain,2022)">(Bain,2022)</a>
 “One of the best examples of this … is the Miura-ori or Miura fold, devised in 1970 by Dr. Miura Koryo. The Miura fold is a folding
 technique that allows even a large sheet of paper to be quickly opened out and stowed again by simply pushing and pulling on its 
 diagonals.” See figure 3. <a href="#(Sasaki ,2021)">(Sasaki ,2021)</a>
-	            <img src="Miurafold.jpg" alt="the folds of a map" width="450" height"400">
+	            <img src="Miurafold.jpg" alt="figure 3." width="450" height"400">
 			fig 3 shows the unfolding of a Miura fold source (Bain,2022) 
 	    
 NASA had an unsuccessful attempt at demonstrating the use of solar sails <a href="#(Nasa,2023)">(Nasa,2023)</a> however Japan’s Aerospace Exploration Agency
@@ -117,7 +117,7 @@ combination of solar sails and solar power. The sail of the IKAROS is approximat
 spinning of IKAROS to dynamically deploy the sail. <a href="#(Jaxa, no date - b)">(Jaxa, no date - b)</a> see figure 4. The dynamic movement was inspired by Origami
 folds and by continuing to have IKAROS rotate in space that would provide a constant force so the sail wouldn’t collapse or require a
 support boom.
-            <img src="deploymentJAXA.jpg" alt="How a ship rotates to automaticaly depoy its sails" width="450" height"400">
+            <img src="deploymentJAXA.jpg" alt="figure 4." width="450" height"400">
 		Figure 4. shows the stages of deployment
 </pre>
     <h3 id="Conclusion">Conclusion</h3>  
@@ -241,7 +241,7 @@ Fulton, J. (2023) Dynamics Analysis of Origami-Folded Deployable Space Structure
 
 <script>
 var slideImages = ["Slide1.jpg", "Slide2.jpg", "Slide3.jpg", "Slide4.jpg", "Slide5.jpg"]; 
-var currentSlide = 0;
+var currentSlide = 1;
 
 function showSlide() {
 	    document.getElementById('Slide').src = slideImages[currentSlide];
