--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ function showSlideNumber(slideNumber) {
 showSlide();
 </script>
 <div id="slide-container">
-<img id="Slide" src="Slidel.jpg" alt="slide 1" style="width:100%; max-width:800px">
+<img id="Slide" src="Slide1.jpg" alt="slide 1" style="width:100%; max-width:800px">
 
 <div class="button-container">
 	<button class="button" onclick="prevSlide()">Previous</button> 
