--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ director at NASA Headquarters. <a href="#(Nasa,2022)">(Nasa,2022)</a>
 
 One area that is seeing a lot of development is the idea of using Origami for solar sails. True solar sailing is where a vessel could
 be powered by the pressure from photons. however most solar sails also use the large sail as a solar panel as well to generate power.
-[6] Unlike the James Webb telescope a solar sail can be flexible but it still needs to deploy in a consistent way. A multiple step
+Unlike the James Webb telescope a solar sail can be flexible but it still needs to deploy in a consistent way. A multiple step
 folding pattern may be easier to fold on earth by human but in space a multistep process is much harder to perform. This is where the
 usefulness of origami comes in, there are many patterns designed to unfold a panel in one motion.<a href="#(Wonder Dome, no date)">(Wonder Dome, no date)</a> 
 insert figure here <a href="#(Bain,2022)">(Bain,2022)</a>
