--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ One area that is seeing a lot of development is the idea of using Origami for so
 be powered by the pressure from photons. however most solar sails also use the large sail as a solar panel as well to generate power.
 Unlike the James Webb telescope a solar sail can be flexible but it still needs to deploy in a consistent way. A multiple step
 folding pattern may be easier to fold on earth by human but in space a multistep process is much harder to perform. This is where the
-usefulness of origami comes in, there are many patterns designed to unfold a panel in one motion.<a href="#(Wonder Dome, no date)">(Wonder Dome, no date)</a> 
-insert figure here <a href="#(Bain,2022)">(Bain,2022)</a>
+usefulness of origami comes in, there are many patterns designed to unfold a panel in one motion.<a href="#(Wonder Dome, no date)">(Wonder Dome, no date)</a>
+<a href="#(Bain,2022)">(Bain,2022)</a>
 “One of the best examples of this … is the Miura-ori or Miura fold, devised in 1970 by Dr. Miura Koryo. The Miura fold is a folding
 technique that allows even a large sheet of paper to be quickly opened out and stowed again by simply pushing and pulling on its 
 diagonals.” See figure 3. <a href="#(Sasaki ,2021)">(Sasaki ,2021)</a>
