--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ and we will look at these in greater depth.
 Origami is the Japanese art of folding paper; it is primarily used to create decorative pieces. Many people have seen, and some made, 
 an origami crane. In approximately 20 folds you can turn a flat piece of paper into a complex crane. If you have attempted to make a crane,
 then you may have noticed that despite having strict instructions there is a degree of flexibility to each fold: no folds need to be 
-perfect to obtain a recognisable crane. Paper and human creation allows for some error in each fold however if you where to use origami in
+perfect to obtain a recognisable crane. Paper and human creation allows for some error in each fold however if you were to use origami in
 space there needs to be no errors. To make sure that is possible we need to model the folds.
 </pre>
     <h3 id="modelling">modelling</h3>  
@@ -100,7 +100,7 @@ To model two panels as seen in figure 1 (a) first they split each panel into 4 h
 the panels passing through each other using surface-to-surface contact, elements were set up between particles in hexagonal elements as
 seen by the light blue shade in figure 1 (b). The dark blue is where the surface-to-surface contact elements would be tested when the model
 was run. How the panels move is controlled by the particles moving, and how the particles are connected. The particles have three 
-translational degrees of freedom (DOFs)i.e., they can move in an x, y and z plane. At the hinge between panels the particles are connected
+translational degrees of freedom (DOFs) i.e., they can move in an x, y and z plane. At the hinge between panels the particles are connected
 so can be coupled and therefore the panels are now modelled as being connected. In a truly ridged system only bar-to-bar elements would be
 required to connect particles but by establishing a bar-to-bar spring element the model can now obtain data about strain and energy of real
 panels during deployment. <a href="#(Chen,2015)">(Chen,2015)</a> 
@@ -137,9 +137,9 @@ diagonals.” See figure 3. <a href="#(Sasaki ,2021)">(Sasaki ,2021)</a>
 			fig 3 shows the unfolding of a Miura fold source (Bain,2022) 
 	    
 NASA had an unsuccessful attempt at demonstrating the use of solar sails <a href="#(Nasa,2023)">(Nasa,2023)</a> however Japan’s Aerospace Exploration Agency
-(JAXA) launched IKAROS on 20 May 2010. <a href="#(Jaxa, no date - a)">(Jaxa, no date - a)</a> It was successful in proving the viability of navigationusing a
+(JAXA) launched IKAROS on 20 May 2010. <a href="#(Jaxa, no date - a)">(Jaxa, no date - a)</a> It was successful in proving the viability of navigation using a
 combination of solar sails and solar power. The sail of the IKAROS is approximately 20 meters in diagonal length and is as thin as
-0.0075 mm. It deployed in two stages:  the first stage was controlled by an inboard deployment mechanism; the secondbstage was the
+0.0075 mm. It deployed in two stages:  the first stage was controlled by an inboard deployment mechanism; the second stage was the
 spinning of IKAROS to dynamically deploy the sail. <a href="#(Jaxa, no date - b)">(Jaxa, no date - b)</a> see figure 4. The dynamic movement was inspired by Origami
 folds and by continuing to have IKAROS rotate in space that would provide a constant force so the sail wouldn’t collapse or require a
 support boom.
